--- a/styles/style.css
+++ b/styles/style.css
@@ -1,3 +1,11 @@
+body::before {
+  content: "";
+  position: absolute;
+  inset: 0;
+  z-index: 1;
+  background-color: rgba(255, 255, 255, 0.5);
+}
+
 .title {
   padding-top: 60px;
   font-family: Raleway, sans-serif;
@@ -7,7 +15,7 @@
   letter-spacing: 0.035em;
   text-align: center;
   text-transform: uppercase;
-  z-index: 1;
+  z-index: 2;
 }
 
 .title:hover::before {
@@ -27,11 +35,19 @@
   border: 2px solid black;
   border-radius: 20px;
   background-color: white;
-  z-index: 2;
+  z-index: 3;
   padding: 36px 44px;
+}
+
+.title::after {
+  content: "*";
 }
 
 .video {
   position: absolute;
   z-index: 0;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  object-position: center;
 }
