--- a/styles/global.css
+++ b/styles/global.css
@@ -10,13 +10,13 @@ html {
 
 body {
   width: 1600px;
+  height: 900px;
   min-width: 800px;
   margin: 0px;
   font-family: Raleway, sans-serif;
   display: flex;
   flex-direction: column;
   align-items: center;
-  height: inherit;
   position: relative;
 }
 
