--- a/styles/style.css
+++ b/styles/style.css
@@ -1,3 +1,30 @@
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
+}
+
+html {
+  height: 100%;
+  width: 100%;
+}
+
+body {
+  min-width: 800px;
+  height: inherit;
+  margin: 0px;
+  font-family: Raleway, sans-serif;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  position: relative;
+}
+
+h1 {
+  margin: 0;
+  padding: 0;
+}
+
 .body {
   margin: 0 auto;
 }
@@ -54,5 +81,4 @@ body::before {
   height: 100%;
   object-fit: cover;
   object-position: center;
-  min-width: 800px;
 }
