--- a/styles/style.css
+++ b/styles/style.css
@@ -47,7 +47,7 @@ body::before {
   text-align: center;
   text-transform: uppercase;
   z-index: 2;
-  white-space: nowrap;
+  /*white-space: nowrap;*/
 }
 
 .title:hover::before {
