Устранение ошибок автотестов

--- a/styles/style.css
+++ b/styles/style.css
@@ -43,10 +43,12 @@ body::before {
   font-weight: 800;
   font-size: 116px;
   line-height: 136px;
-  letter-spacing: 0.035em;
+  /*letter-spacing: 0.035em;*/
+  letter-spacing: 3px;
   text-align: center;
   text-transform: uppercase;
   z-index: 2;
+  /*display: inline-block;*/
   /*white-space: nowrap;*/
 }
 
@@ -73,6 +75,7 @@ body::before {
 
 .title::after {
   content: "*";
+  z-index: 2;
 }
 
 .video {
