Устранение ошибок автотестов

--- a/styles/style.css
+++ b/styles/style.css
@@ -48,7 +48,7 @@ body::before {
   text-transform: uppercase;
   z-index: 2;
   white-space: nowrap;
-  margin-right: -0.25em;
+  /*margin-right: -0.25em;*/
 }
 
 .title:hover::before {
@@ -76,6 +76,7 @@ body::before {
   content: "*";
   vertical-align: baseline;
   display: inline;
+  margin-left: -0.05em;
 }
 
 .video {
