--- a/styles/style.css
+++ b/styles/style.css
@@ -34,7 +34,7 @@ body::before {
   position: absolute;
   inset: 0;
   z-index: 1;
-  background-color: rgba(255, 255, 255, 0.2);
+  background-color: rgba(255, 255, 255, 0.1);
 }
 
 .title {
@@ -47,8 +47,6 @@ body::before {
   text-align: center;
   text-transform: uppercase;
   z-index: 2;
-  white-space: nowrap;
-  /*margin-right: -0.25em;*/
 }
 
 .title:hover::before {
@@ -76,7 +74,7 @@ body::before {
   content: "*";
   vertical-align: baseline;
   display: inline;
-  margin-left: -0.05em;
+  /*margin-left: 0.05em;*/
 }
 
 .video {
