--- a/styles/style.css
+++ b/styles/style.css
@@ -34,7 +34,7 @@ body::before {
   position: absolute;
   inset: 0;
   z-index: 1;
-  background-color: rgba(255, 255, 255, 0.1);
+  background-color: rgba(255, 255, 255, 0.5);
 }
 
 .title {
@@ -74,7 +74,7 @@ body::before {
   content: "*";
   vertical-align: baseline;
   display: inline;
-  /*margin-left: 0.05em;*/
+  margin-left: 0.1em;
 }
 
 .video {
