Устранение ошибок автотестов

--- a/styles/style.css
+++ b/styles/style.css
@@ -34,7 +34,7 @@ body::before {
   position: absolute;
   inset: 0;
   z-index: 1;
-  background-color: rgba(255, 255, 255, 0.5);
+  background-color: rgba(255, 255, 255, 0.4);
 }
 
 .title {
@@ -47,6 +47,7 @@ body::before {
   text-align: center;
   text-transform: uppercase;
   z-index: 2;
+  margin-left: 0.1em;
 }
 
 .title:hover::before {
