--- a/styles/style.css
+++ b/styles/style.css
@@ -49,7 +49,8 @@ body::before {
   z-index: 2;
 }
 
-.title:hover::before {
+/*.title:hover::before {*/
+.title::before {
   content: "На самом деле нет.\AВажнее &mdash; научиться ошибаться.";
   white-space: pre;
   position: absolute;
