--- a/styles/style.css
+++ b/styles/style.css
@@ -33,8 +33,8 @@ body::before {
   content: "";
   position: absolute;
   inset: 0;
-  z-index: 4;
-  background-color: rgba(255, 255, 255, 0.35);
+  z-index: 3;
+  background-color: rgba(255, 255, 255, 0.2);
 }
 
 .title {
@@ -47,6 +47,10 @@ body::before {
   text-align: center;
   text-transform: uppercase;
   z-index: 2;
+}
+
+.bottom_text {
+  margin-left: 0.2em;
 }
 
 /*.title:hover::before {*/
@@ -67,7 +71,7 @@ body::before {
   border: 2px solid black;
   border-radius: 20px;
   background-color: white;
-  z-index: 3;
+  z-index: 4;
   padding: 36px 44px;
 }
 
@@ -75,7 +79,7 @@ body::before {
   content: "*";
   vertical-align: baseline;
   display: inline;
-  margin-left: 0.1em;
+  margin-left: -0.1em;
 }
 
 .video {
