--- a/styles/style.css
+++ b/styles/style.css
@@ -29,14 +29,6 @@ h1 {
   margin: 0 auto;
 }
 
-body::before {
-  content: "";
-  position: absolute;
-  inset: 0;
-  z-index: 3;
-  background-color: rgba(255, 255, 255, 0.2);
-}
-
 .title {
   padding-top: 60px;
   font-family: Raleway, sans-serif;
@@ -47,14 +39,22 @@ body::before {
   text-align: center;
   text-transform: uppercase;
   z-index: 2;
+  max-width: 800px;
 }
 
-.bottom_text {
+.bottom_line {
   margin-left: 0.2em;
 }
 
-/*.title:hover::before {*/
-.title::before {
+body::after {
+  content: "";
+  position: absolute;
+  inset: 0;
+  z-index: 1;
+  background-color: rgba(255, 255, 255, 0.3);
+}
+
+.title:hover::before {
   content: "На самом деле нет.\AВажнее &mdash; научиться ошибаться.";
   white-space: pre;
   position: absolute;
@@ -67,8 +67,8 @@ body::before {
   letter-spacing: normal;
   text-align: left;
   text-transform: none;
-  box-shadow: 0 12px 0 0 black;
-  border: 2px solid black;
+  box-shadow: 0 12px 0 0 currentColor;
+  border: 2px solid currentColor;
   border-radius: 20px;
   background-color: white;
   z-index: 4;
@@ -77,9 +77,6 @@ body::before {
 
 .title::after {
   content: "*";
-  vertical-align: baseline;
-  display: inline;
-  margin-left: -0.1em;
 }
 
 .video {
