--- a/styles/style.css
+++ b/styles/style.css
@@ -77,6 +77,9 @@ body::after {
 
 .title::after {
   content: "*";
+  vertical-align: baseline;
+  display: inline;
+  margin-left: -0.1em;
 }
 
 .video {
