--- a/styles/style.css
+++ b/styles/style.css
@@ -38,7 +38,7 @@ h1 {
   letter-spacing: 0.035em;
   text-align: center;
   text-transform: uppercase;
-  z-index: 2;
+  z-index: 3;
   max-width: 800px;
 }
 
@@ -50,8 +50,13 @@ body::after {
   content: "";
   position: absolute;
   inset: 0;
-  z-index: 1;
+  z-index: 2;
   background-color: rgba(255, 255, 255, 0.3);
+}
+
+.title:hover,
+:focus {
+  z-index: 1;
 }
 
 .title:hover::before {
@@ -71,7 +76,7 @@ body::after {
   border: 2px solid currentColor;
   border-radius: 20px;
   background-color: white;
-  z-index: 4;
+  z-index: 3;
   padding: 36px 44px;
 }
 
@@ -79,7 +84,7 @@ body::after {
   content: "*";
   vertical-align: baseline;
   display: inline;
-  margin-left: -0.2em;
+  margin-left: -0.25em;
 }
 
 .video {
