--- a/styles/style.css
+++ b/styles/style.css
@@ -43,7 +43,7 @@ h1 {
 }
 
 .bottom_line {
-  margin-left: 0.3em;
+  margin-left: 0.25em;
 }
 
 body::after {
@@ -54,9 +54,12 @@ body::after {
   background-color: rgba(255, 255, 255, 0.3);
 }
 
-.title:hover,
-:focus {
+.title:hover {
+  /*content: "";*/
+  /*position: absolute;*/
+  /*inset: 0;*/
   z-index: 1;
+  /*background-color: rgba(255, 255, 255, 0.3);*/
 }
 
 .title:hover::before {
@@ -76,8 +79,9 @@ body::after {
   border: 2px solid currentColor;
   border-radius: 20px;
   background-color: white;
-  z-index: 3;
+  z-index: 1;
   padding: 36px 44px;
+  opacity: 1;
 }
 
 .title::after {
